--- a/frappe/www/about.html
+++ b/frappe/www/about.html
@@ -19,7 +19,7 @@
 	<h3>{{ doc.company_history_heading or "Company History" }}</h3>
 	{% for d in doc.get({"doctype":"Company History"}) %}
 	<div class="row">
-		<span class="col-md-2"><h4 style="margin:0px;">{{ d.year }}</h4></span>
+		<span class="col-md-2"><h4>{{ d.year }}</h4></span>
 		<span class="col-md-10"><p>{{ d.highlight }}</p></span>
 	</div>
 	{% endfor %}
