--- a/frappe/public/js/frappe/list/list_item_main_head.html
+++ b/frappe/public/js/frappe/list/list_item_main_head.html
@@ -1,6 +1,11 @@
 <div class="list-item__content ellipsis text-muted
 	{% if(col.type==="Subject") { %}
 		list-item__content--flex-2
+	{% } else if (index===1) { %}
+		{% if(col.type==="Indicator") { %}
+			hidden-xs
+		{% } %}
+	
 	{% } else { %}
 		hidden-xs
 	{% } %}
